[package]
name = "matahatan-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.26.0", features = ["accesskit", "default_fonts", "glow", "persistence"] }
egui = "0.26.0"
env_logger = "0.11.1"
log = "0.4.20"
maze_generator = "2.0.0"
serde = { version = "1.0.196", features = ["derive"] }

